kubernetes/homeassistant/traefik-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  type: ExternalName
  externalName: homeassistant.mng.skaal.lan
  ports:
    - port: 8123
      targetPort: 8123

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.skaal.dev`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
  tls:
    secretName: home-tls
